--- a/res/resource.rc
+++ b/res/resource.rc
@@ -7,4 +7,9 @@ IMG_BG_TITLE IMAGE "./bg_title.png"
 IMG_BG_CSELECT IMAGE "./bg_cselect.png"
 IMG_UI_CSBOX IMAGE "./ui_csbox.png"
 IMG_UI_FRAME IMAGE "./ui_frame.png"
+IMG_CH_ATARI IMAGE "./ch_atari.png"
+IMG_CH_SLOWCIRCLE IMAGE "./ch_slowcircle.png"
 IMG_CH_KOSUZU_B0 IMAGE "./ch_kosuzu_b0.png"
+IMG_CH_KOSUZU_B1 IMAGE "./ch_kosuzu_b1.png"
+IMG_CH_KOSUZU_B2 IMAGE "./ch_kosuzu_b2.png"
+IMG_CH_KOSUZU_B3 IMAGE "./ch_kosuzu_b3.png"
