--- a/res/resource.rc
+++ b/res/resource.rc
@@ -9,6 +9,8 @@ IMG_UI_CSBOX IMAGE "./ui_csbox.png"
 IMG_UI_FRAME IMAGE "./ui_frame.png"
 IMG_CH_ATARI IMAGE "./ch_atari.png"
 IMG_CH_SLOWCIRCLE IMAGE "./ch_slowcircle.png"
+IMG_CH_OPTION0 IMAGE "./ch_option0.png"
+IMG_CH_OPTION1 IMAGE "./ch_option1.png"
 IMG_CH_KOSUZU_B0 IMAGE "./ch_kosuzu_b0.png"
 IMG_CH_KOSUZU_B1 IMAGE "./ch_kosuzu_b1.png"
 IMG_CH_KOSUZU_B2 IMAGE "./ch_kosuzu_b2.png"
