player bullet tmp

--- a/res/resource.rc
+++ b/res/resource.rc
@@ -15,3 +15,5 @@ IMG_CH_KOSUZU_B0 IMAGE "./ch_kosuzu_b0.png"
 IMG_CH_KOSUZU_B1 IMAGE "./ch_kosuzu_b1.png"
 IMG_CH_KOSUZU_B2 IMAGE "./ch_kosuzu_b2.png"
 IMG_CH_KOSUZU_B3 IMAGE "./ch_kosuzu_b3.png"
+IMG_BU_JIKI_HARI IMAGE "./bu_jiki_hari.png"
+IMG_BU_JIKI_BIGHARI IMAGE "./bu_jiki_bighari.png"
