--- a/res/resource.rc
+++ b/res/resource.rc
@@ -5,6 +5,7 @@ IDS_CSELECT TEXT "./txt_cselect.txt"
 IMG_BG_LOAD IMAGE "./bg_load.png"
 IMG_BG_TITLE IMAGE "./bg_title.png"
 IMG_BG_CSELECT IMAGE "./bg_cselect.png"
+IMG_BG_CS_SCROLL IMAGE "./bg_cs_scroll.png"
 IMG_UI_CSBOX IMAGE "./ui_csbox.png"
 IMG_UI_FRAME IMAGE "./ui_frame.png"
 IMG_CH_ATARI IMAGE "./ch_atari.png"
@@ -15,5 +16,9 @@ IMG_CH_KOSUZU_B0 IMAGE "./ch_kosuzu_b0.png"
 IMG_CH_KOSUZU_B1 IMAGE "./ch_kosuzu_b1.png"
 IMG_CH_KOSUZU_B2 IMAGE "./ch_kosuzu_b2.png"
 IMG_CH_KOSUZU_B3 IMAGE "./ch_kosuzu_b3.png"
+IMG_CH_KOSUZU_L0 IMAGE "./ch_kosuzu_l0.png"
+IMG_CH_KOSUZU_L1 IMAGE "./ch_kosuzu_l1.png"
+IMG_CH_KOSUZU_R0 IMAGE "./ch_kosuzu_r0.png"
+IMG_CH_KOSUZU_R1 IMAGE "./ch_kosuzu_r1.png"
 IMG_BU_JIKI_HARI IMAGE "./bu_jiki_hari.png"
 IMG_BU_JIKI_BIGHARI IMAGE "./bu_jiki_bighari.png"
