--- a/res/resource.rc
+++ b/res/resource.rc
@@ -20,6 +20,7 @@ IMG_CH_KOSUZU_L0 IMAGE "./ch_kosuzu_l0.png"
 IMG_CH_KOSUZU_L1 IMAGE "./ch_kosuzu_l1.png"
 IMG_CH_KOSUZU_R0 IMAGE "./ch_kosuzu_r0.png"
 IMG_CH_KOSUZU_R1 IMAGE "./ch_kosuzu_r1.png"
+IMG_CH_ENEMY IMAGE "./ch_enemy.png"
 IMG_BU_JIKI_HARI IMAGE "./bu_jiki_hari.png"
 IMG_BU_JIKI_BIGHARI IMAGE "./bu_jiki_bighari.png"
 IMG_BU_LAZER IMAGE "./bu_lazer.png"
