--- a/res/resource.rc
+++ b/res/resource.rc
@@ -2,6 +2,7 @@
 
 IDS_TITLE TEXT "./txt_title.txt"
 IDS_CSELECT TEXT "./txt_cselect.txt"
+IDS_GAME TEXT "./txt_game.txt"
 IMG_BG_LOAD IMAGE "./bg_load.png"
 IMG_BG_TITLE IMAGE "./bg_title.png"
 IMG_BG_CSELECT IMAGE "./bg_cselect.png"
