--- a/res/resource.rc
+++ b/res/resource.rc
@@ -6,6 +6,7 @@ IMG_BG_LOAD IMAGE "./bg_load.png"
 IMG_BG_TITLE IMAGE "./bg_title.png"
 IMG_BG_CSELECT IMAGE "./bg_cselect.png"
 IMG_BG_CS_SCROLL IMAGE "./bg_cs_scroll.png"
+IMG_BG_MOUNTAIN IMAGE "./bg_mountain.png"
 IMG_UI_CSBOX IMAGE "./ui_csbox.png"
 IMG_UI_FRAME IMAGE "./ui_frame.png"
 IMG_CH_ATARI IMAGE "./ch_atari.png"
