--- a/res/resource.rc
+++ b/res/resource.rc
@@ -1,27 +1,33 @@
 #include "../src/_resource.hpp"
 
-IDS_OPTION TEXT "./txt_option.txt"
-IDS_LOGUE TEXT "./txt_logue.txt"
-IMG_BG_LOAD IMAGE "./bg_load.png"
-IMG_BG_TITLE IMAGE "./bg_title.png"
-IMG_BG_CSELECT IMAGE "./bg_cselect.png"
-IMG_BG_CS_SCROLL IMAGE "./bg_cs_scroll.png"
-IMG_BG_MOUNTAIN IMAGE "./bg_mountain.png"
-IMG_UI_CSBOX IMAGE "./ui_csbox.png"
-IMG_UI_FRAME IMAGE "./ui_frame.png"
-IMG_CH_ATARI IMAGE "./ch_atari.png"
-IMG_CH_SLOWCIRCLE IMAGE "./ch_slowcircle.png"
-IMG_CH_OPTION0 IMAGE "./ch_option0.png"
-IMG_CH_OPTION1 IMAGE "./ch_option1.png"
-IMG_CH_KOSUZU_B0 IMAGE "./ch_kosuzu_b0.png"
-IMG_CH_KOSUZU_B1 IMAGE "./ch_kosuzu_b1.png"
-IMG_CH_KOSUZU_B2 IMAGE "./ch_kosuzu_b2.png"
-IMG_CH_KOSUZU_B3 IMAGE "./ch_kosuzu_b3.png"
-IMG_CH_KOSUZU_L0 IMAGE "./ch_kosuzu_l0.png"
-IMG_CH_KOSUZU_L1 IMAGE "./ch_kosuzu_l1.png"
-IMG_CH_KOSUZU_R0 IMAGE "./ch_kosuzu_r0.png"
-IMG_CH_KOSUZU_R1 IMAGE "./ch_kosuzu_r1.png"
-IMG_CH_ENEMY IMAGE "./ch_enemy.png"
-IMG_BU_JIKI_HARI IMAGE "./bu_jiki_hari.png"
-IMG_BU_JIKI_BIGHARI IMAGE "./bu_jiki_bighari.png"
-IMG_BU_LAZER IMAGE "./bu_lazer.png"
+IMG_BG_LOAD IMAGE "bg_load.png"
+IMG_BG_TITLE IMAGE "bg_title.png"
+IMG_BG_CSELECT IMAGE "bg_cselect.png"
+IMG_BG_CS_SCROLL IMAGE "bg_cs_scroll.png"
+IMG_BG_MOUNTAIN IMAGE "bg_mountain.png"
+IMG_UI_CSBOX IMAGE "ui_csbox.png"
+IMG_UI_FRAME IMAGE "ui_frame.png"
+IMG_CH_ATARI IMAGE "ch_atari.png"
+IMG_CH_SLOWCIRCLE IMAGE "ch_slowcircle.png"
+IMG_CH_OPTION0 IMAGE "ch_option0.png"
+IMG_CH_OPTION1 IMAGE "ch_option1.png"
+IMG_CH_KOSUZU_B0 IMAGE "ch_kosuzu_b0.png"
+IMG_CH_KOSUZU_B1 IMAGE "ch_kosuzu_b1.png"
+IMG_CH_KOSUZU_B2 IMAGE "ch_kosuzu_b2.png"
+IMG_CH_KOSUZU_B3 IMAGE "ch_kosuzu_b3.png"
+IMG_CH_KOSUZU_L0 IMAGE "ch_kosuzu_l0.png"
+IMG_CH_KOSUZU_L1 IMAGE "ch_kosuzu_l1.png"
+IMG_CH_KOSUZU_R0 IMAGE "ch_kosuzu_r0.png"
+IMG_CH_KOSUZU_R1 IMAGE "ch_kosuzu_r1.png"
+IMG_CH_ENEMY IMAGE "ch_enemy.png"
+IMG_BU_JIKI_HARI IMAGE "bu_jiki_hari.png"
+IMG_BU_JIKI_BIGHARI IMAGE "bu_jiki_bighari.png"
+IMG_BU_LAZER IMAGE "bu_lazer.png"
+FNT_NORMAL MYFONT "SourceHanSerif-Heavy.otf"
+FNT_OPTION MYFONT "ELEPHNT.TTF"
+FNT_DIGIT MYFONT "consolab.ttf"
+IDS_OPTION TEXT "txt_option.txt"
+IDS_LOGUE TEXT "txt_logue.txt"
+FNT_NAME_NORMAL STRING {"Œ¹ƒm–¾’© Heavy\0"}
+FNT_NAME_OPTION STRING {"Elephant\0"}
+FNT_NAME_DIGIT STRING {"Consolas\0"}
